--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     .lb-row{
       position:relative;
       display:grid;
-      grid-template-columns: 70px 140px 1fr auto;
+      grid-template-columns: 70px 1fr auto;
       gap:12px;
       align-items:center;
       padding:14px 14px;
@@ -244,46 +244,26 @@
     .place.p2{ color:rgba(220,226,235,.98); border-color:rgba(220,226,235,.55); box-shadow:0 0 14px rgba(220,226,235,.12); }
     .place.p3{ color:rgba(205,127,50,.98); border-color:rgba(205,127,50,.55); box-shadow:0 0 14px rgba(205,127,50,.12); }
 
-    .rankbox{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      min-width: 120px;
-    }
-    .rankbox img{
-      width:46px;height:46px;
-      object-fit:contain;
-      filter:drop-shadow(0 12px 18px rgba(0,0,0,.55));
-      flex: 0 0 auto;
-    }
-    .rank-meta{
-      display:flex;
-      flex-direction:column;
-      line-height:1.05;
-      min-width:0;
-    }
-    .rank-meta .rt{
-      font-family:Cinzel,serif;
-      font-weight:700;
-      font-size:12px;
-      letter-spacing:.06em;
-      color:rgba(240,222,154,.92);
-      text-transform:uppercase;
-      white-space:nowrap;
-    }
-    .rank-meta .rg{
-      font-size:11px;
-      color:rgba(255,255,255,.60);
-      white-space:nowrap;
-    }
-
+    /* header: rank icon + name (reference-like) */
     .namebox{
       display:flex;
       flex-direction:column;
       gap:8px;
       min-width: 0;
     }
-    .namebox .nm{
+    .name-top{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      min-width:0;
+    }
+    .rank-mini{
+      width:42px;height:42px;
+      object-fit:contain;
+      filter:drop-shadow(0 12px 18px rgba(0,0,0,.55));
+      flex:0 0 auto;
+    }
+    .nm{
       font-family:Cinzel,serif;
       font-weight:700;
       font-size:22px;
@@ -292,7 +272,9 @@
       overflow:hidden;
       text-overflow:ellipsis;
       white-space:nowrap;
+      min-width:0;
     }
+
     .ach-mini{
       display:flex;
       gap:6px;
@@ -343,14 +325,26 @@
       .season-name{ text-align:center; max-width:92vw; }
       .center-title .title{ font-size:18px; letter-spacing:.08em; }
 
+      /* more reference-like on phone */
       .lb-row{
         grid-template-columns: 58px 1fr;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto auto;
         gap:10px;
+        padding:14px 12px;
       }
-      .rankbox{ grid-column: 2 / 3; }
-      .namebox{ grid-column: 2 / 3; }
-      .scores{ grid-column: 2 / 3; justify-self:end; }
+      .scores{
+        grid-column: 2 / 3;
+        justify-self:end;
+      }
+      .place{
+        width:50px;height:50px;
+        font-size:20px;
+      }
+      .rank-mini{ width:40px;height:40px; }
+      .nm{ font-size:26px; }
+      .score-pill{ min-width: 92px; padding:9px 10px; }
+      .score-pill .val{ font-size:20px; }
+      .ach-mini img{ width:24px;height:24px; }
     }
 
     /* ====== Modal ====== */
@@ -389,6 +383,7 @@
     .modal-body{
       padding:16px;
       overflow:auto;
+      overflow-x:hidden; /* IMPORTANT: no sideways scroll on phone */
       -webkit-overflow-scrolling:touch;
       flex:1 1 auto;
       position:relative;
@@ -418,17 +413,28 @@
       color:rgba(240,222,154,.90);margin:16px 0 10px;font-size:14px;
     }
 
-    .medals{ display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:10px; }
+    /* medals: make them tighter on phone */
+    .medals{
+      display:grid;
+      grid-template-columns:repeat(3, minmax(0, 1fr));
+      gap:10px;
+      margin-top:10px;
+      width:100%;
+    }
     .pill{
       border:1px solid rgba(214,181,106,.35);
       border-radius:14px;
       background:rgba(0,0,0,.25);
       padding:10px 12px;
-      display:flex;align-items:center;justify-content:space-between;gap:10px;
+      display:flex;align-items:center;justify-content:space-between;gap:8px;
       box-shadow:0 12px 26px rgba(0,0,0,.35) inset;
       min-width:0;
     }
-    .pill .left{ display:flex;align-items:center;gap:10px;font-weight:700;color:rgba(255,255,255,.9); }
+    .pill .left{
+      display:flex;align-items:center;gap:8px;
+      font-weight:700;color:rgba(255,255,255,.9);
+      min-width:0;
+    }
     .pill .left span{ white-space:nowrap; }
     .pill .num{ font-weight:800;color:rgba(255,255,255,.92); white-space:nowrap; }
 
@@ -437,13 +443,17 @@
       border-radius:16px;
       background:rgba(0,0,0,.20);
       padding:14px;
+      max-width:100%;
+      overflow:hidden; /* IMPORTANT: achievements never overflow */
     }
     .ach-grid{
       display:grid;
-      grid-template-columns:repeat(3,1fr);
+      grid-template-columns:repeat(3, minmax(0, 1fr));
       gap:14px;
       justify-items:center;
       align-items:center;
+      width:100%;
+      max-width:100%;
     }
     .ach-item{
       width:108px;height:108px;
@@ -453,13 +463,14 @@
       display:flex;align-items:center;justify-content:center;
       overflow:hidden;
       cursor:pointer;
+      max-width:100%;
     }
     .ach-item img{ width:78%;height:78%;object-fit:contain;filter:drop-shadow(0 12px 18px rgba(0,0,0,.55)); }
 
     .ach-t9{
       grid-column:1 / span 3;
       width:100%;
-      max-width: calc(108px*3 + 14px*2);
+      max-width:100%;
       height:170px;
       border-radius:20px;
       border:1px solid rgba(214,181,106,.45);
@@ -467,8 +478,21 @@
       display:flex;align-items:center;justify-content:center;
       box-shadow:0 0 28px rgba(214,181,106,.18);
       cursor:pointer;
+      overflow:hidden;
     }
     .ach-t9 img{ width:140px;height:140px;object-fit:contain; }
+
+    /* phone tweaks for modal so nothing goes out */
+    @media (max-width: 420px){
+      .pill{ padding:9px 10px; gap:6px; }
+      .pill .left{ gap:6px; font-size:12px; }
+      .pill .num{ font-size:14px; }
+
+      .ach-item{ width:92px; height:92px; border-radius:16px; }
+      .ach-t9{ height:150px; border-radius:18px; }
+      .ach-t9 img{ width:120px; height:120px; }
+      .ach-grid{ gap:10px; }
+    }
 
     .history-wrap{
       border:1px solid rgba(214,181,106,.25);
@@ -479,6 +503,7 @@
     .history-scroll{
       max-height: 44vh;
       overflow:auto;
+      overflow-x:hidden;
       -webkit-overflow-scrolling:touch;
       display:flex;
       flex-direction:column;
@@ -507,6 +532,7 @@
       grid-template-columns: 86px 1fr auto;
       align-items:center;
       gap:10px;
+      max-width:100%;
     }
     .hist-date{ font-weight:800;font-size:18px;color:rgba(255,255,255,.94); }
     .hist-game{ color:rgba(240,222,154,.90);font-weight:800;text-align:center; }
@@ -519,6 +545,7 @@
       font-size:12px;
       color:rgba(255,255,255,.88);
       white-space:nowrap;
+      max-width: 100%;
     }
 
     .hint{ color:rgba(255,255,255,.45);font-size:12px;margin-top:12px;text-align:center; }
@@ -678,7 +705,7 @@
   }
 
   function miniAchievementsHtml(list){
-    const items = (list || []).map(x => String(x).trim()).filter(Boolean).slice(0, 8);
+    const items = (list || []).map(x => String(x).trim()).filter(Boolean).slice(0, 10);
     if (!items.length) return "";
     return `<div class="ach-mini">` + items.map(t => `<img src="./assets/${t}.png" alt="${t}">`).join("") + `</div>`;
   }
@@ -700,9 +727,7 @@
     lbEl.innerHTML = rows.map((r, idx) => {
       const place = idx + 1;
       const rankLevel = Number(r.rank_level || 1);
-      const rankTitle = String(r.rank_title || "Новичок");
       const achList = r.achievements_list || (String(r.achievements || "").split(",").map(s=>s.trim()).filter(Boolean));
-
       const seasonScore = toNum(r.season_score);
       const totalScore  = toNum(r.all_seasons_score);
 
@@ -710,16 +735,11 @@
         <div class="lb-row ${elemClass(place)}" data-player="${r.player_id}">
           <div class="place ${placeClass(place)}">${place}</div>
 
-          <div class="rankbox">
-            <img src="./assets/rank${rankLevel}.png" alt="rank${rankLevel}">
-            <div class="rank-meta">
-              <div class="rt">${rankTitle}</div>
-              <div class="rg">rank ${rankLevel}</div>
-            </div>
-          </div>
-
           <div class="namebox">
-            <div class="nm">${r.name ?? ""}</div>
+            <div class="name-top">
+              <img class="rank-mini" src="./assets/rank${rankLevel}.png" alt="rank${rankLevel}">
+              <div class="nm">${r.name ?? ""}</div>
+            </div>
             ${miniAchievementsHtml(achList)}
           </div>
 
@@ -775,7 +795,7 @@
 
     for (const t of r){
       if (t === "__spacer__"){
-        html += `<div style="width:108px;height:108px;"></div>`;
+        html += `<div style="width:92px;height:92px;"></div>`;
         continue;
       }
       html += `<div class="ach-item" data-ach="${t}"><img src="./assets/${t}.png" alt="${t}"></div>`;
