--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- CRITICAL preload (ускоряет “появление” и убирает прогрузку на глазах) -->
+  <link rel="preload" as="image" href="./assets/bg.png">
+  <link rel="preload" as="image" href="./assets/logo.png">
   <link rel="preload" as="image" href="./assets/fire.png">
   <link rel="preload" as="image" href="./assets/earth.png">
   <link rel="preload" as="image" href="./assets/air.png">
   <link rel="preload" as="image" href="./assets/water.png">
   <link rel="preload" as="image" href="./assets/champion.png">
+
+  <link rel="preload" as="image" href="./assets/rank1.png">
+  <link rel="preload" as="image" href="./assets/rank2.png">
+  <link rel="preload" as="image" href="./assets/rank3.png">
+  <link rel="preload" as="image" href="./assets/rank4.png">
+  <link rel="preload" as="image" href="./assets/rank5.png">
+  <link rel="preload" as="image" href="./assets/rank6.png">
+  <link rel="preload" as="image" href="./assets/rank7.png">
+
+  <link rel="preload" as="image" href="./assets/t9.png">
 
   <style>
     :root{
@@ -73,7 +86,10 @@
       backdrop-filter:blur(10px);
     }
     .brand{display:flex;align-items:center;justify-content:flex-start;min-width:240px}
-    .brand img{height:44px;width:auto;display:block;filter:drop-shadow(0 10px 18px rgba(0,0,0,.55))}
+    .brand img{
+      height:44px;width:auto;display:block;
+      filter:drop-shadow(0 10px 18px rgba(0,0,0,.55));
+    }
     .center-title{text-align:center;line-height:1}
     .center-title .title{
       font-family:Cinzel,serif;
@@ -205,6 +221,8 @@
       box-shadow:0 18px 44px rgba(0,0,0,.45);
       overflow:hidden;
       cursor:pointer;
+      content-visibility: auto;              /* ускоряет длинный список */
+      contain-intrinsic-size: 120px 340px;   /* резерв размера чтобы не прыгало */
     }
     .lb-row::before{
       content:"";
@@ -244,7 +262,6 @@
     .place.p2{ color:rgba(220,226,235,.98); border-color:rgba(220,226,235,.55); box-shadow:0 0 14px rgba(220,226,235,.12); }
     .place.p3{ color:rgba(205,127,50,.98); border-color:rgba(205,127,50,.55); box-shadow:0 0 14px rgba(205,127,50,.12); }
 
-    /* header: rank icon + name (reference-like) */
     .namebox{
       display:flex;
       flex-direction:column;
@@ -325,7 +342,6 @@
       .season-name{ text-align:center; max-width:92vw; }
       .center-title .title{ font-size:18px; letter-spacing:.08em; }
 
-      /* more reference-like on phone */
       .lb-row{
         grid-template-columns: 58px 1fr;
         grid-template-rows: auto auto;
@@ -333,7 +349,7 @@
         padding:14px 12px;
       }
 
-      /* ✅ ВАЖНО: центрируем Season/Total на телефоне */
+      /* ✅ центрируем Season/Total на телефоне */
       .scores{
         grid-column: 2 / 3;
         justify-self: stretch;
@@ -678,15 +694,15 @@
   }
 
   async function apiMeta(){
-    const res = await fetch(`${API_BASE}?mode=meta`);
+    const res = await fetch(`${API_BASE}?mode=meta`, { cache: "no-store" });
     return await res.json();
   }
   async function apiDashboard(seasonId){
-    const res = await fetch(`${API_BASE}?mode=dashboard&season_id=${encodeURIComponent(seasonId)}`);
+    const res = await fetch(`${API_BASE}?mode=dashboard&season_id=${encodeURIComponent(seasonId)}`, { cache: "no-store" });
     return await res.json();
   }
   async function apiProfile(playerId, seasonId){
-    const res = await fetch(`${API_BASE}?player_id=${encodeURIComponent(playerId)}&season_id=${encodeURIComponent(seasonId)}`);
+    const res = await fetch(`${API_BASE}?player_id=${encodeURIComponent(playerId)}&season_id=${encodeURIComponent(seasonId)}`, { cache: "no-store" });
     return await res.json();
   }
 
@@ -716,7 +732,8 @@
   function miniAchievementsHtml(list){
     const items = (list || []).map(x => String(x).trim()).filter(Boolean).slice(0, 10);
     if (!items.length) return "";
-    return `<div class="ach-mini">` + items.map(t => `<img src="./assets/${t}.png" alt="${t}">`).join("") + `</div>`;
+    // decoding async + lazy (ускоряет первый экран)
+    return `<div class="ach-mini">` + items.map(t => `<img loading="lazy" decoding="async" src="./assets/${t}.png" alt="${t}">`).join("") + `</div>`;
   }
 
   async function renderLeaderboard(){
@@ -746,7 +763,7 @@
 
           <div class="namebox">
             <div class="name-top">
-              <img class="rank-mini" src="./assets/rank${rankLevel}.png" alt="rank${rankLevel}">
+              <img class="rank-mini" decoding="async" loading="eager" src="./assets/rank${rankLevel}.png" alt="rank${rankLevel}">
               <div class="nm">${r.name ?? ""}</div>
             </div>
             ${miniAchievementsHtml(achList)}
@@ -794,7 +811,7 @@
     let html = `<div class="ach-wrap"><div class="ach-grid">`;
 
     if (hasT9){
-      html += `<div class="ach-t9" data-ach="t9"><img src="./assets/t9.png" alt="t9"></div>`;
+      html += `<div class="ach-t9" data-ach="t9"><img decoding="async" loading="eager" src="./assets/t9.png" alt="t9"></div>`;
     }
 
     const r = [...rest];
@@ -807,7 +824,7 @@
         html += `<div style="width:92px;height:92px;"></div>`;
         continue;
       }
-      html += `<div class="ach-item" data-ach="${t}"><img src="./assets/${t}.png" alt="${t}"></div>`;
+      html += `<div class="ach-item" data-ach="${t}"><img decoding="async" loading="lazy" src="./assets/${t}.png" alt="${t}"></div>`;
     }
 
     html += `</div></div>`;
@@ -869,7 +886,7 @@
 
     profileEl.innerHTML = `
       <div class="pc-top">
-        <img class="rank-icon" src="${rankIcon}" alt="rank${rank.level}">
+        <img class="rank-icon" decoding="async" loading="eager" src="${rankIcon}" alt="rank${rank.level}">
         <div class="rank-title">${rank.title}</div>
         <div class="player-name">${nameFromProfile}</div>
       </div>
@@ -950,7 +967,53 @@
     }
   }
 
-  init();
+  /* ========= SPEED: preload critical + idle preload secondary ========= */
+  function preloadImages(urls){
+    return Promise.all(urls.map((url) => new Promise((resolve) => {
+      const img = new Image();
+      img.onload = () => resolve(true);
+      img.onerror = () => resolve(false);
+      img.decoding = "async";
+      img.src = url;
+    })));
+  }
+
+  const ASSETS_CRITICAL = [
+    "./assets/bg.png",
+    "./assets/logo.png",
+    "./assets/fire.png",
+    "./assets/earth.png",
+    "./assets/air.png",
+    "./assets/water.png",
+    "./assets/champion.png",
+    "./assets/rank1.png",
+    "./assets/rank2.png",
+    "./assets/rank3.png",
+    "./assets/rank4.png",
+    "./assets/rank5.png",
+    "./assets/rank6.png",
+    "./assets/rank7.png",
+    "./assets/t9.png",
+  ];
+
+  const ASSETS_SECONDARY = [
+    "./assets/t1.png","./assets/t2.png","./assets/t3.png","./assets/t4.png",
+    "./assets/t5.png","./assets/t6.png","./assets/t7.png","./assets/t8.png",
+  ];
+
+  async function boot(){
+    // прогреваем критичные, чтобы не было “прорисовки на глазах”
+    await preloadImages(ASSETS_CRITICAL);
+
+    // запускаем приложение
+    await init();
+
+    // догружаем остальное в idle
+    const idle = window.requestIdleCallback || ((fn) => setTimeout(fn, 250));
+    idle(() => { preloadImages(ASSETS_SECONDARY); });
+  }
+
+  boot();
 </script>
 </body>
 </html>
