--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- Мягкий preload -->
   <link rel="preload" as="image" href="./assets/bg.png">
   <link rel="preload" as="image" href="./assets/logo.png">
   <link rel="preload" as="image" href="./assets/champion.png">
 
+  <!-- ranks -->
   <link rel="preload" as="image" href="./assets/rank1.png">
   <link rel="preload" as="image" href="./assets/rank2.png">
   <link rel="preload" as="image" href="./assets/rank3.png">
@@ -20,6 +22,8 @@
   <link rel="preload" as="image" href="./assets/rank5.png">
   <link rel="preload" as="image" href="./assets/rank6.png">
   <link rel="preload" as="image" href="./assets/rank7.png">
+
+  <!-- t9 -->
   <link rel="preload" as="image" href="./assets/t9.png">
 
   <style>
@@ -34,10 +38,6 @@
       --shadow:0 20px 60px rgba(0,0,0,.55);
       --shadow2:0 10px 30px rgba(0,0,0,.45);
       --radius:18px;
-
-      --rowA: rgba(255,255,255,.060);
-      --rowB: rgba(255,255,255,.035);
-      --glass: rgba(12, 13, 17, .35);
     }
 
     *{box-sizing:border-box}
@@ -84,30 +84,16 @@
       backdrop-filter:blur(10px);
     }
     .brand{display:flex;align-items:center;justify-content:flex-start;min-width:240px}
-    .brand img{
-      height:44px;width:auto;display:block;
-      filter:drop-shadow(0 10px 18px rgba(0,0,0,.55));
-    }
+    .brand img{height:44px;width:auto;display:block;filter:drop-shadow(0 10px 18px rgba(0,0,0,.55))}
     .center-title{text-align:center;line-height:1}
     .center-title .title{
-      font-family:Cinzel,serif;
-      font-weight:700;
-      letter-spacing:.10em;
-      font-size:22px;
-      text-transform:uppercase;
-      color:rgba(255,255,255,.94);
-      text-shadow:0 18px 40px rgba(0,0,0,.6);
-      white-space:nowrap;
+      font-family:Cinzel,serif;font-weight:700;letter-spacing:.10em;font-size:22px;
+      text-transform:uppercase;color:rgba(255,255,255,.94);
+      text-shadow:0 18px 40px rgba(0,0,0,.6);white-space:nowrap;
     }
     .season-name{
-      font-family:Cinzel,serif;
-      font-weight:600;
-      letter-spacing:.02em;
-      font-size:14px;
-      color:rgba(240,222,154,.92);
-      text-align:right;
-      justify-self:end;
-      max-width:520px;
+      font-family:Cinzel,serif;font-weight:600;letter-spacing:.02em;font-size:14px;
+      color:rgba(240,222,154,.92);text-align:right;justify-self:end;max-width:520px;
     }
 
     .controls{
@@ -199,53 +185,33 @@
     }
 
     .lb{
-      padding:12px 12px 16px;
+      padding:14px 12px 18px;
       display:flex;
       flex-direction:column;
-      gap:10px;
+      gap:12px;
     }
 
     .lb-row{
       position:relative;
       display:grid;
-      grid-template-columns: 68px 1fr auto;
+      grid-template-columns: 70px 1fr auto;
       gap:12px;
       align-items:center;
-      padding:12px 12px;
+      padding:14px 14px;
       border-radius:18px;
-
-      background: var(--glass);
-      border:1px solid rgba(214,181,106,.18);
-      box-shadow:0 14px 34px rgba(0,0,0,.40);
-
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
-
+      border:1px solid rgba(214,181,106,.22);
+      background:rgba(10,11,14,.46);
+      box-shadow:0 18px 44px rgba(0,0,0,.45);
       overflow:hidden;
       cursor:pointer;
 
       content-visibility:auto;
-      contain-intrinsic-size: 92px 340px;
+      contain-intrinsic-size: 120px 340px;
     }
-    .lb-row:nth-child(odd)::before,
-    .lb-row:nth-child(even)::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      z-index:0;
-    }
-    .lb-row:nth-child(odd)::before{ background: var(--rowA); }
-    .lb-row:nth-child(even)::before{ background: var(--rowB); }
 
-    .lb-row::after{
-      content:"";
-      position:absolute;
-      inset:0;
-      background: linear-gradient(to right, rgba(0,0,0,.40), rgba(0,0,0,.10), rgba(0,0,0,.40));
-      z-index:0;
-      pointer-events:none;
-    }
-    .lb-row > *{ position:relative; z-index:1; }
+    /* матовое стекло + зебра */
+    .lb-row.z1{ background: rgba(22,24,30,.42); }
+    .lb-row.z2{ background: rgba(16,18,24,.36); }
 
     .place{
       display:flex;
@@ -257,112 +223,178 @@
       width:54px;height:54px;
       border-radius:999px;
       border:1px solid rgba(255,255,255,.18);
-      background:rgba(0,0,0,.28);
-      margin-left:2px;
+      background:rgba(0,0,0,.35);
+      margin-left:4px;
     }
     .place.p1{ color:rgba(255,226,120,.98); border-color:rgba(255,226,120,.55); box-shadow:0 0 14px rgba(255,210,90,.18); }
     .place.p2{ color:rgba(220,226,235,.98); border-color:rgba(220,226,235,.55); box-shadow:0 0 14px rgba(220,226,235,.12); }
     .place.p3{ color:rgba(205,127,50,.98); border-color:rgba(205,127,50,.55); box-shadow:0 0 14px rgba(205,127,50,.12); }
 
-    .namebox{display:flex;flex-direction:column;gap:6px;min-width:0}
-    .name-top{display:flex;align-items:center;gap:10px;min-width:0}
-    .rank-mini{
-      width:40px;height:40px;object-fit:contain;
-      filter:drop-shadow(0 12px 18px rgba(0,0,0,.55));
-      flex:0 0 auto;
+    /* ===== имя/щит/достижения ===== */
+    .namebox{min-width:0}
+
+    /* ✅ grid так, чтобы и имя+T9, и строка достижений начинались ровно под ИКОНКОЙ щита */
+    .namegrid{
+      display:grid;
+      grid-template-columns: 46px 1fr auto;
+      grid-template-rows: auto auto;
+      column-gap:10px;
+      row-gap:8px;
+      align-items:center;
+      min-width:0;
     }
+
+    .rank-mini{
+      grid-column:1;
+      grid-row:1;
+      width:42px;height:42px;object-fit:contain;
+      filter:drop-shadow(0 12px 18px rgba(0,0,0,.55));
+    }
+
     .nm{
+      grid-column:2;
+      grid-row:1;
       font-family:Cinzel,serif;
       font-weight:700;
       font-size:22px;
       color:rgba(255,255,255,.95);
       text-shadow:0 14px 34px rgba(0,0,0,.55);
-      overflow:hidden;text-overflow:ellipsis;white-space:nowrap;min-width:0;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      white-space:nowrap;
+      min-width:0;
     }
 
+    /* ✅ t9 справа от имени (если есть) */
+    .t9-mini{
+      grid-column:3;
+      grid-row:1;
+      width:34px;height:34px;
+      object-fit:contain;
+      filter:drop-shadow(0 12px 18px rgba(0,0,0,.55));
+      opacity:.98;
+    }
+
+    /* ✅ Достижения начинаются ровно по левой границе щита */
     .ach-mini{
+      grid-column:1 / 4;
+      grid-row:2;
       display:flex;
       gap:6px;
-      flex-wrap:wrap;
       align-items:center;
-      margin-left:50px;
+      min-width:0;
     }
     .ach-mini img{
-      width:24px;height:24px;object-fit:contain;
+      width:26px;height:26px;object-fit:contain;
       filter:drop-shadow(0 10px 14px rgba(0,0,0,.55));
       opacity:.95;
     }
 
     .scores{
-      display:flex;
-      gap:8px;
-      justify-content:flex-end;
-      align-items:center;
-      flex-wrap:nowrap;
+      display:flex;gap:10px;justify-content:flex-end;align-items:center;flex-wrap:wrap;
     }
     .score-pill{
-      border:1px solid rgba(214,181,106,.28);
+      border:1px solid rgba(214,181,106,.35);
       border-radius:14px;
-      background:rgba(0,0,0,.20);
-      padding:9px 10px;
-      min-width:86px;
+      background:rgba(0,0,0,.22);
+      padding:10px 12px;
+      min-width:84px;
       text-align:center;
-      box-shadow:0 12px 24px rgba(0,0,0,.32) inset;
+      box-shadow:0 12px 26px rgba(0,0,0,.35) inset;
       white-space:nowrap;
     }
     .score-pill .lbl{font-size:10px;color:rgba(255,255,255,.55);letter-spacing:.06em;text-transform:uppercase}
     .score-pill .val{margin-top:4px;font-size:20px;font-weight:800;color:rgba(255,255,255,.92)}
 
-    /* ====== МОБИЛЬНАЯ АДАПТАЦИЯ (фикс) ====== */
+    /* ===== MOBILE: фиксируем верх, скроллится только рейтинг ===== */
     @media (max-width: 760px){
-      .topbar{display:flex;flex-direction:column;align-items:center;gap:10px;text-align:center}
+      body{ overflow:hidden; } /* ✅ чтобы не скроллилась вся страница */
+
+      .wrap{
+        width:min(1200px,94vw);
+        height:100vh;             /* ✅ вся высота экрана */
+        margin:0 auto;            /* без нижнего “пустого” скролла */
+        padding:14px 0 14px;
+        display:flex;
+        flex-direction:column;
+        gap:12px;
+      }
+
+      .topbar{
+        position:sticky;
+        top:0;
+        z-index:30;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        gap:10px;
+        text-align:center;
+        margin:0;
+      }
       .brand{min-width:0;justify-content:center}
       .brand img{height:42px}
       .season-name{text-align:center;max-width:92vw}
       .center-title .title{font-size:18px;letter-spacing:.08em}
 
-      .lb{padding:10px 10px 14px; gap:10px;}
-
-      /* ещё компактнее, но структура как на ПК */
-      .lb-row{
-        grid-template-columns: 54px 1fr auto;
-        gap:8px;
-        padding:10px 10px;
-        border-radius:16px;
+      .controls{
+        position:sticky;
+        top: calc(0px + 0px); /* topbar уже sticky и занимает место сам */
+        z-index:29;
+        margin-top:0;
       }
 
-      .place{width:42px;height:42px;font-size:16px}
+      .panel{
+        margin-top:0;
+        flex:1 1 auto;  /* ✅ панель занимает остаток */
+        display:flex;
+        flex-direction:column;
+        overflow:hidden; /* ✅ чтобы внутри скроллилось только .lb */
+      }
 
-      .rank-mini{width:28px;height:28px}
-      .nm{font-size:17px}
+      .panel-head{ flex:0 0 auto; }
 
-      /* главное: достижения НЕ ПЕРЕНОСЯТСЯ, а скроллятся по горизонтали */
+      .lb{
+        flex:1 1 auto;
+        overflow:auto;                 /* ✅ скролл только рейтинга */
+        -webkit-overflow-scrolling:touch;
+        padding:12px 10px 16px;
+      }
+
+      .lb-row{
+        grid-template-columns:58px 1fr auto;
+        gap:10px;
+        padding:12px 12px;
+      }
+
+      .place{width:50px;height:50px;font-size:20px;margin-left:2px}
+
+      .namegrid{
+        grid-template-columns: 40px 1fr auto;
+        column-gap:8px;
+        row-gap:6px;
+      }
+      .rank-mini{width:36px;height:36px}
+
+      .nm{font-size:20px}
+      .t9-mini{width:30px;height:30px}
+
+      /* ✅ На телефоне достижения — одной строкой (если много — скролл), t9 исключён */
       .ach-mini{
-        margin-left:38px;        /* под уменьшенный rank */
-        gap:5px;
-        flex-wrap:nowrap;        /* запрет переноса -> не будет столбика */
-        overflow-x:auto;         /* если много — свайп */
+        flex-wrap:nowrap;
+        overflow-x:auto;
         overflow-y:hidden;
         -webkit-overflow-scrolling:touch;
         padding-bottom:2px;
+        gap:5px;
       }
-      .ach-mini img{width:18px;height:18px}
+      .ach-mini img{width:20px;height:20px}
 
-      /* скрываем скроллбар, чтобы не бесил */
-      .ach-mini::-webkit-scrollbar{height:0}
-      .ach-mini{scrollbar-width:none}
-
-      .scores{gap:6px}
-      .score-pill{
-        min-width:68px;
-        padding:7px 8px;
-        border-radius:12px;
-      }
-      .score-pill .lbl{font-size:9px}
-      .score-pill .val{font-size:16px}
+      .scores{gap:8px}
+      .score-pill{min-width:74px;padding:8px 10px;border-radius:12px}
+      .score-pill .val{font-size:18px}
     }
 
-    /* ====== Modal (как было) ====== */
+    /* ====== Modal (оставляем как было, ты сказал “отлично, оставляем”) ====== */
     .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.70);backdrop-filter:blur(6px);z-index:50}
     .card{
       width:min(560px,92vw);
@@ -548,6 +580,13 @@
     return Number.isFinite(n) ? n : 0;
   }
 
+  function clampRankLevel(v){
+    const n = Number(v);
+    if (!Number.isFinite(n)) return 1;
+    const i = Math.round(n);
+    return Math.min(7, Math.max(1, i));
+  }
+
   async function apiMeta(){
     const res = await fetch(`${API_BASE}?mode=meta`);
     return await res.json();
@@ -577,10 +616,25 @@
     return "";
   }
 
+  function splitMiniAchievements(list){
+    const items = (list || []).map(x => String(x).trim()).filter(Boolean);
+    const hasT9 = items.includes("t9");
+    const rest = items.filter(x => x !== "t9");
+    return { hasT9, rest };
+  }
+
   function miniAchievementsHtml(list){
-    const items = (list || []).map(x => String(x).trim()).filter(Boolean).slice(0, 30);
-    if (!items.length) return "";
-    return `<div class="ach-mini">` + items.map(t => `<img loading="lazy" decoding="async" src="./assets/${t}.png" alt="${t}">`).join("") + `</div>`;
+    const { hasT9, rest } = splitMiniAchievements(list);
+    const icons = rest.slice(0, 12);
+    const achLine = icons.length
+      ? `<div class="ach-mini">${icons.map(t => `<img loading="lazy" decoding="async" src="./assets/${t}.png" alt="${t}">`).join("")}</div>`
+      : `<div class="ach-mini"></div>`;
+
+    const t9 = hasT9
+      ? `<img class="t9-mini" loading="eager" decoding="async" src="./assets/t9.png" alt="t9">`
+      : ``;
+
+    return { achLine, t9 };
   }
 
   async function renderLeaderboard(){
@@ -599,21 +653,30 @@
 
     lbEl.innerHTML = rows.map((r, idx) => {
       const place = idx + 1;
-      const rankLevel = Number(r.rank_level || 1);
+      const rankLevel = clampRankLevel(r.rank_level);
       const achList = r.achievements_list || (String(r.achievements || "").split(",").map(s=>s.trim()).filter(Boolean));
       const seasonScore = toNum(r.season_score);
       const totalScore  = toNum(r.all_seasons_score);
+      const zebra = (place % 2 === 0) ? "z2" : "z1";
+
+      const { achLine, t9 } = miniAchievementsHtml(achList);
 
       return `
-        <div class="lb-row" data-player="${r.player_id}">
+        <div class="lb-row ${zebra}" data-player="${r.player_id}">
           <div class="place ${placeClass(place)}">${place}</div>
 
           <div class="namebox">
-            <div class="name-top">
-              <img class="rank-mini" decoding="async" loading="eager" src="./assets/rank${rankLevel}.png" alt="rank${rankLevel}">
+            <div class="namegrid">
+              <img class="rank-mini"
+                   decoding="async"
+                   loading="eager"
+                   src="./assets/rank${rankLevel}.png"
+                   alt="rank${rankLevel}"
+                   onerror="this.onerror=null;this.src='./assets/rank1.png';">
               <div class="nm">${r.name ?? ""}</div>
+              ${t9}
+              ${achLine}
             </div>
-            ${miniAchievementsHtml(achList)}
           </div>
 
           <div class="scores">
@@ -719,7 +782,7 @@
     const ach = data.achievements || [];
     if (ach.includes("t9")) modalBody.classList.add("champion");
 
-    const rankIcon = `./assets/rank${rank.level}.png`;
+    const rankIcon = `./assets/rank${clampRankLevel(rank.level)}.png`;
     const nameFromProfile = (data.profile || []).find(x => String(x.label || '').toLowerCase().includes("имя"))?.value || "";
 
     const medalsHtml = `
@@ -732,7 +795,7 @@
 
     profileEl.innerHTML = `
       <div class="pc-top">
-        <img class="rank-icon" decoding="async" loading="eager" src="${rankIcon}" alt="rank${rank.level}">
+        <img class="rank-icon" decoding="async" loading="eager" src="${rankIcon}" alt="rank${rank.level}" onerror="this.onerror=null;this.src='./assets/rank1.png';">
         <div class="rank-title">${rank.title}</div>
         <div class="player-name">${nameFromProfile}</div>
       </div>
@@ -752,6 +815,7 @@
     });
   }
 
+  /* SPEED: прогрев картинок */
   function preloadImages(urls){
     urls.forEach((url) => {
       const img = new Image();
@@ -759,14 +823,16 @@
       img.src = url;
     });
   }
+
   function warmupAssets(){
     preloadImages([
       "./assets/rank1.png","./assets/rank2.png","./assets/rank3.png",
-      "./assets/t9.png","./assets/logo.png"
+      "./assets/rank4.png","./assets/rank5.png","./assets/rank6.png","./assets/rank7.png",
+      "./assets/t9.png"
     ]);
+
     const idle = window.requestIdleCallback || ((fn) => setTimeout(fn, 400));
     idle(() => preloadImages([
-      "./assets/rank4.png","./assets/rank5.png","./assets/rank6.png","./assets/rank7.png",
       "./assets/t1.png","./assets/t2.png","./assets/t3.png","./assets/t4.png",
       "./assets/t5.png","./assets/t6.png","./assets/t7.png","./assets/t8.png"
     ]));
